automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
+			<div class="secondrow">
 				<section class="col-4 shadow">
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
