automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<!--/////////// Ends Featured Brands //////////-->
 
 					<!--/////////// Archive List //////////-->
-					<section class="col-4 shadow">
+					<section class="col-4 last shadow">
 						<h2>Shoe Archive</h2>
 						<h3><a href="#">2014</a></h3>
 						<ul>
